; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/nodes/extr_outfuncs.c__outForeignScan.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/nodes/extr_outfuncs.c__outForeignScan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"FOREIGNSCAN\00", align 1
@operation = common dso_local global i32 0, align 4
@CmdType = common dso_local global i32 0, align 4
@fs_server = common dso_local global i32 0, align 4
@fdw_exprs = common dso_local global i32 0, align 4
@fdw_private = common dso_local global i32 0, align 4
@fdw_scan_tlist = common dso_local global i32 0, align 4
@fdw_recheck_quals = common dso_local global i32 0, align 4
@fs_relids = common dso_local global i32 0, align 4
@fsSystemCol = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @_outForeignScan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_outForeignScan(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = call i32 @WRITE_NODE_TYPE(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %6 = load i32, i32* %3, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @_outScanInfo(i32 %6, i32* %7)
  %9 = load i32, i32* @operation, align 4
  %10 = load i32, i32* @CmdType, align 4
  %11 = call i32 @WRITE_ENUM_FIELD(i32 %9, i32 %10)
  %12 = load i32, i32* @fs_server, align 4
  %13 = call i32 @WRITE_OID_FIELD(i32 %12)
  %14 = load i32, i32* @fdw_exprs, align 4
  %15 = call i32 @WRITE_NODE_FIELD(i32 %14)
  %16 = load i32, i32* @fdw_private, align 4
  %17 = call i32 @WRITE_NODE_FIELD(i32 %16)
  %18 = load i32, i32* @fdw_scan_tlist, align 4
  %19 = call i32 @WRITE_NODE_FIELD(i32 %18)
  %20 = load i32, i32* @fdw_recheck_quals, align 4
  %21 = call i32 @WRITE_NODE_FIELD(i32 %20)
  %22 = load i32, i32* @fs_relids, align 4
  %23 = call i32 @WRITE_BITMAPSET_FIELD(i32 %22)
  %24 = load i32, i32* @fsSystemCol, align 4
  %25 = call i32 @WRITE_BOOL_FIELD(i32 %24)
  ret void
}

declare dso_local i32 @WRITE_NODE_TYPE(i8*) #1

declare dso_local i32 @_outScanInfo(i32, i32*) #1

declare dso_local i32 @WRITE_ENUM_FIELD(i32, i32) #1

declare dso_local i32 @WRITE_OID_FIELD(i32) #1

declare dso_local i32 @WRITE_NODE_FIELD(i32) #1

declare dso_local i32 @WRITE_BITMAPSET_FIELD(i32) #1

declare dso_local i32 @WRITE_BOOL_FIELD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
